another fix on mobile

--- a/styles/2020/main.css
+++ b/styles/2020/main.css
@@ -21,7 +21,6 @@ body {
   color: #25283d;
   background-color: white;
   overflow-x: hidden;
-  min-width: 500px;
 }
 /* changes highlight color to blue */
 *::selection {
